# MCP-DB-Client

./: .gitignore  LICENSE  README.md  TESTING.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
http-1c-dll/: CMakeLists.txt  version.h
http-1c-dll/src/: AddInNative.cpp  AddInNative.def  AddInNative.h  HttpServerComponent.cpp  HttpServerComponent.h
http-1c-dp/: http1c.xml
http-1c-dp/http1c/Forms/: Form.xml  TestOpenForm.xml
http-1c-dp/http1c/Forms/Form/Ext/: Form.xml
http-1c-dp/http1c/Forms/Form/Ext/Form/: Module.bsl
http-1c-dp/http1c/Forms/TestOpenForm/Ext/: Form.xml
http-1c-dp/http1c/Templates/: http1c.xml
tests/: CMakeLists.txt  test_main.cpp
